syntax = "proto3";
package rti.amanzi.protobuf;
option java_package = "org.rti.amanzi.protobuf";
option go_package = "ptypes";
option java_multiple_files = true;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message Value {
    oneof kind {
        double double_value = 1;
        float float_value = 2;
        int64 int64_value = 3;
        int32 int32_value = 4;
        uint64 uint64_value = 5;
        uint32 uint32_value = 6;
        string string_value = 7;
        NullValue null_value = 8;
    }
}

// `NullValue` is a singleton enumeration to represent the null value for the
// `Value` type union.
//
//  The JSON representation for `NullValue` is JSON `null`.
enum NullValue {
  // Null value.
  NULL_VALUE = 0;
}

// A Source object holds spatial and origin meta data associated with the timeseries
message Source {
    string name = 1;
    string code = 2;
}

message Elevation {
    double value = 1;
    string units = 2;
    string datum = 3;
}

message SourceLocation {
    string name = 1;
    string code = 2;
    Elevation elevation = 3;
}

message Parameter {
    string name = 1;
    string code = 2;
    string units = 3;
    string statistic = 4;
    string windowedInterval = 5;
}

message TimeInfo {
    reserved 4;
    reserved "windowedInterval";
    google.protobuf.Timestamp referenceTime = 1;
    google.protobuf.Timestamp start = 2;
    google.protobuf.Timestamp end = 3;
    // string windowedInterval = 4;
    string interval = 5;
}

message Origin {
    google.protobuf.Timestamp modifiedOn = 1;
    string description = 2;
    repeated string referenceIds =3;
}

message Group {
    string groupId = 1;
    string description = 2;
    string groupType = 3;
}

message TimeSeriesMetaInfo {
    reserved 6;
    reserved "statistic";
    string id = 1;
    string name = 2;
    string code = 3;
    string type = 4;
    string typeVariant = 5;
    // string statistic = 6;
    google.protobuf.Struct properties = 7;
    repeated Group groups = 8;
    Source source = 9;
    SourceLocation sourceLocation = 10;
    Parameter parameter = 11;
    TimeInfo timeInfo = 12;
    Origin origin = 13;
}

message TimeRecord {
    google.protobuf.Timestamp datetime = 1;
    Value value = 2;
    repeated string qualifiers = 3;
    google.protobuf.Struct properties = 4;
}

message TimeSeries {
     // a meta object describing the timeseries
    TimeSeriesMetaInfo metaInfo = 1;
    // the time , value records of the timeseries
    repeated TimeRecord data = 3;
}


